--- a/css/main.css
+++ b/css/main.css
@@ -28,10 +28,41 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .text-pimary {
-    color: #6c38cc;
+    color: #6c38cc!important;
     font-weight: bold;
 }
+
+.breadcrumb-item a {
+    color: #e47ad5;
+    font-weight: bold;
+}
+
+.breadcrumb-item {
+    color: #fafafa!important;
+}
 /* Общие стили */
+
+/* Подкатегория */
+.subcategory {
+    background: #1e1f28;
+    padding: 30px;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.date {
+    display: flex;
+    align-items: center;
+}
+
+.subcategory-h3 {
+    font-size: 26px;
+    font-weight: bold;
+    color: #fafafa!important;
+}
+/* Подкатегория */
 
 /* Шапка сайта */
 .navbar {
@@ -94,14 +125,14 @@ h1, h2, h3, h4, h5, h6 {
     padding: 20px;
 }
 
-.category-card a {
+.category-card a, .sub-link {
     color: #fafafa;
     border: 1px solid #fafafa;
     padding: 10px;
     border-radius: 10px;
     transition: background ease .3s;
 }
-.category-card a:hover {
+.category-card a:hover, .sub-link:hover {
     background: #101114;
     transition: background ease .3s;
 }
