--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,45 @@
 body {
-    background: #010409;
+    background: #0d1117;
     color: #e6edf3;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 }
+
+
+h1 {
+    font-size: 32px;
+    font-weight: bold;
+}
+
+h2 {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+ul {
+    margin: 0 0 24px;
+    padding: 8px 0 0;
+}
+
+li {
+    padding-top: 8px;
+}
+
+.color-muted {
+    color: #848d97;
+    font-size: 24px;
+}
+
+/* Колонки */
+.col-12 {
+    width: 100%;
+    padding: 0 16px;
+}
+
+.col-6 {
+    width: 50%;
+    padding: 0 16px;
+}
+/* Колонки */
 
 .header {
     height: 64px;
@@ -23,7 +60,7 @@ body {
 .menu {
     border-radius: 0.375rem;
     border: 1px solid #30363d;
-    padding: 5px;
+    padding: 7px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -54,9 +91,143 @@ body {
     height: 32px;
 }
 
+.input-block {
+     display: flex;
+     align-items: center;
+}
+
 .search-input {
     border: 1px solid #30363d;
-    border-radius: 0.375rem;
+    border-radius: 0.375rem 0 0 0.375rem;    
     padding: 5px 8px;
     font-size: 14px;
+    height: 32px;
+}
+
+.search-btn {
+    border: 1px solid #30363d;
+    border-left: none;
+    border-radius: 0 0.375rem 0.375rem 0;  
+    background: #21262d;
+    width: 28px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.main-section {
+    padding: 40px;
+    height: 237px;
+    width: 100%;
+    background: #161b22;
+    display: flex;
+    align-items: center;
+}
+
+.articles {
+    margin: 40px 0 0;
+    padding: 0 40px 24px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.article {
+    display: flex;
+    flex-direction: column;
+    padding: 0 16px 24px;
+    width: 33%;
+}
+
+.article__link {
+    font-size: 14px;
+    color: #2f81f7;
+}
+
+.footer {
+    border-top: 1px solid #30363d;
+    margin: 40px 0 0;
+    padding: 16px;
+}
+
+.btn-up {
+    /* фиксированное позиционирование */
+    position: fixed;
+    /* цвет фона */
+    background-color: #673ab7;
+    /* расстояние от правого края окна браузера */
+    right: 20px;
+    /* расстояние от нижнего края окна браузера */
+    bottom: 0;
+    /* скругление верхнего левого угла */
+    border-top-left-radius: 8px;
+    /* скругление верхнего правого угла */
+    border-top-right-radius: 8px;
+    /* вид курсора */
+    cursor: pointer;
+    /* отображение элемента как flex */
+    display: flex;
+    /* выравниваем элементы внутри элемента по центру вдоль поперечной оси */
+    align-items: center;
+    /* выравниваем элементы внутри элемента по центру вдоль главной оси */
+    justify-content: center;
+    /* ширина элемента */
+    width: 60px;
+    /* высота элемента */
+    height: 50px;
+  }
+  
+  .btn-up::before {
+    content: "";
+    width: 40px;
+    height: 40px;
+    background: transparent no-repeat center center;
+    background-size: 100% 100%;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23fff' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z'/%3E%3C/svg%3E");
+  }
+  
+  .btn-up_hide {
+    display: none;
+  }
+  
+  @media (hover: hover) and (pointer: fine) {
+    .btn-up:hover {
+      background-color: #512da8; /* цвет заднего фона при наведении */
+    }
+  }
+
+@media (max-width: 768px) {
+    .header {
+        position: fixed;
+        top: 0;
+        left: 0;
+        background: #0d1117;
+        width: 100%;
+    }
+
+    .search-input {
+        display: none;
+    }
+
+    .search-btn {
+        border-radius: 0.375rem;
+        width: 32px;
+    }
+
+    .main-section {
+        flex-wrap: wrap;
+        margin-top: 64px;
+    }
+
+    .col-6 {
+        width: 100%;
+    }
+
+    .articles {
+        padding: 0;
+    }
+
+    .article {
+        width: 100%;
+    }
 }
